# lammpsio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  README.md  conftest.py  lmptools.py  pyproject.toml  requirements-optin.txt  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml  test_deploy.yml
doc/: requirements.txt
doc/source/: api.rst  citing.rst  conf.py  credits.rst  guidelines.rst  index.rst  install.rst  license.rst  tutorials.rst
doc/source/_templates/autosummary/: class.rst
doc/source/api/: api.rst  box.rst  data.rst  dump.rst  index.rst  snapshot.rst  topology.rst
doc/source/api/api reference/: lammpsio.Angles.rst  lammpsio.Bonds.rst  lammpsio.Box.rst  lammpsio.DataFile.rst  lammpsio.Dihedrals.rst  lammpsio.DumpFile.rst  lammpsio.Impropers.rst  lammpsio.LabelMap.rst  lammpsio.Snapshot.rst  lammpsio.topology.rst
doc/source/guide/: credits.rst  index.rst  install.rst  release.rst
doc/source/tutorials/: analysis-tutorial.ipynb  dimer_lattice_tutorial.ipynb
doc/source/tutorials/analysis-tutorial/: analysis-tutorial.ipynb  lammps-input.in
doc/source/tutorials/analysis_tutorial/: analysis_tutorial.ipynb
doc/source/tutorials/ethanol-water-tutorial/: ethanol.json  ethanol.xyz  ethanol_water_mixture.data  ethanol_water_mixture.ipynb  mixture.xyz  pack.inp  water.json  water.xyz
doc/source/tutorials/numba_tutorial/: init.data  init_polymer.py  lammps_input.in  numba_tutorial.ipynb
lmptools/: __init__.py
paper/: paper.bib  paper.md
src/lammpsio/: __init__.py  _compatibility.py  box.py  conftest.py  data.py  dump.py  snapshot.py  topology.py
src/lmptools/: __init__.py
tests/: conftest.py  requirements-optin.txt  requirements.txt  test_box.py  test_data_file.py  test_dump_file.py  test_snapshot.py  test_topology.py
