[metadata]
name = lammpsio
version = 0.3.0
author = Michael P. Howard
author_email = mphoward@auburn.edu
description = Python tools for working with LAMMPS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mphowardlab/lammpsio
project_urls =
    Source Code = https://github.com/mphowardlab/lammpsio
    Issue Tracker = https://github.com/mphowardlab/lammpsio/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src
