[metadata]
name = lammpsio
version = attr: lammpsio.__version__
author = Michael P. Howard
author_email = mphoward@auburn.edu
description = Python tools for working with LAMMPS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mphowardlab/lammpsio
project_urls =
    Source Code = https://github.com/mphowardlab/lammpsio
    Issue Tracker = https://github.com/mphowardlab/lammpsio/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    packaging

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    __init__.py:F401
